# soilbot

./: .gitignore  CLASSIFICATION_KNOWLEDGE.md  CLAUDE.md  LITREVIEW_REPORT.md  ML_REPORT.md  README.md  REPORT.md  config.yaml  requirements-geo.txt  requirements-ml.txt  requirements-rs.txt  requirements.txt  run_finish.sh  run_full_corpus_ocr.sh  run_ocr_b1_loop.sh  run_reocr.sh  schema_audit.md
gold/: GOLD_VALIDATION.md  diag.json  labels.jsonl  manifest.json  scores.json  scores_reocr.json
litreview/: classification_rules.json
litreview/vault/: index.md
ml/: __init__.py  assemble.py  baselines.py  data.py  data3d.py  eval.py  geotech_features.py  graph_build.py  model.py  priors.py  report.py  splits.py  train.py  train3d.py
pipeline/: __init__.py  arcgis.py  attachments.py  config.py  covariates.py  db.py  derive.py  extract.py  graph.py  litreview.py  loaders.py  logging_setup.py  parse_logs.py  report.py  run.py  schema_audit.py  util.py
scripts/: auto_phase6_b2.sh  build_vault.py  classification_swarm.workflow.js  classify_audit.py  data_report.py  db_count.py  gold_diag.py  gold_reocr.py  gold_sample.py  gold_score.py  lit_swarm.workflow.js  ocr_parallel.py  persist_props.py  recover_fulltext.py  reparse_cache.py
soilbot-rs/: Cargo.toml  README.md  pyproject.toml
soilbot-rs/src/: common.rs  config.rs  features.rs  geo.rs  geotech.rs  graph.rs  lib.rs  profile.rs  spt.rs  stress.rs
tests/: parity_rust.py  probe_waf.py  smoke_b2.py  smoke_duckdb.py  smoke_geom.py  smoke_geotech.py  smoke_gold.py  smoke_gpkg.py  smoke_ml.py  smoke_soil.py
(+327 files in other folders)
